# pg_meta_doc

./: .gitignore  Dockerfile  Makefile  README.md  demo_db.sql  docker-compose.yml  main.py  pyproject.toml
docs/: example_report.md  schema.md
examples/: demo_schema.sql
pg_meta_doc/: cli.py  db.py  inspector.py  markdown.py  mermaid.py  rules.py
pg_meta_doc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_inspector.py  test_markdown.py  test_rules.py
