[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-meta-doc"
version = "0.1.0"
description = "Scan PostgreSQL schemas and generate Markdown documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0,<3.0",
  "psycopg[binary]>=3.1,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "testcontainers>=4.7,<5.0",
]

[project.scripts]
dbdoc = "pg_meta_doc.cli:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: integration tests that require Docker",
]

[tool.setuptools.packages.find]
include = ["pg_meta_doc*"]
